# irctc_booking_openenv

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
irctc_booking/: __init__.py  client.py  models.py
irctc_booking/server/: __init__.py  app.py  irctc_booking_environment.py
irctc_booking/sim/: __init__.py  engine.py  event_scheduler.py  grader.py  handlers.py  reward.py  seat_matrix.py  tasks.py
server/: __init__.py  app.py
